# SoccerBootsRecommendProject-Back

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
api/: ApiServer.cpp  ApiServer.h  RecommendationController.cpp  RecommendationController.h
data/: SoccerPlayerBoots.cpp  SoccerPlayerBoots.h
data/reader/: SoccerPlayerBootsDataCsvReader.cpp  SoccerPlayerBootsDataCsvReader.h
data/splitter/: SoccerBootsDataSplitter.cpp  SoccerBootsDataSplitter.h
datasets/: knn_smote_soccer_boots_data.csv
evaluator/: SoccerBootsEvaluator.cpp  SoccerBootsEvaluator.h  evaluateModel.cpp
model/: SoccerBootsBayesianModel.cpp  SoccerBootsBayesianModel.h  SoccerBootsBayesianTrainer.cpp  SoccerBootsBayesianTrainer.h  SoccerBootsRecommender.cpp
model/bayesian/: SoccerBootsBayesianModel.cpp  SoccerBootsBayesianModel.h  SoccerBootsBayesianTrainer.h  SoccerBootsRecommender.cpp  SoccerBootsRecommender.h
model/random_forest/: RandomForestRecommender.cpp  RandomForestRecommender.h
